--- a/escuelas/templates/inferior/base.html
+++ b/escuelas/templates/inferior/base.html
@@ -3,14 +3,15 @@
 
 <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="UTF-8">
+    <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, shrink-to-fit=no">
 
-   
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="static/css/all.css">
-        <!-- font awesome iconos -->
-        <link rel='stylesheet' href="static/css/fontawesome.css">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="static/css/all.css">
+    <!-- font awesome iconos -->
+    <link rel='stylesheet' href="static/css/fontawesome.css">
 
     <title></title>
 
@@ -22,49 +23,76 @@
             text-transform: uppercase;
             text-align: center;
             background-color: #003300;
-    
+
         }
-    
+
         #base li {
             display: inline;
             margin: 0 20px;
-    
+
         }
-    
-        li {
+
+        li a {
             font-size: 18px;
+            font-family: "Homer Simpson UI";
+        }
+
+        h3 {
+            font-size: 20px;
             font-family: "Homer Simpson UI";
         }
     </style>
 </head>
- 
-    <body>
-        <div class="container">
-            <div class="row">
-                <div class="col - xs ">
-                    
-                    <ul id="base">
-                        
-                        <li ><a href="#" class="btn btn-outline-light   "
-                            role="button"><i class="far fa-envelope"></i>
-                             E-mail </a></li>
-                    <li ><a
-                            href="#"class="btn btn-outline-light " 
-                            role="button"><i class="fas fa-mobile-alt"></i>
-                             Telefono </a></li>
-                       
-                    </ul>
-                </div>
+
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col - xs ">
+
+                <ul id="base">
+                    <h3 style=" color: rgb(255, 255, 255); text-align: justify;" class="text-center -xs">
+                        &nbsp; Información de contacto
+                    </h3>
+
+                    <li>
+                        <a href="https://facebook.com/gregoriofelix.cm" target="_blank" class="btn btn-outline-light "
+                            role="button"><i class="fab fa-facebook"></i>
+                        </a>
+                        <a href="https://twitter.com/GregorioFlx" target="_blank" class="btn btn-outline-light "
+                            role="button"><i class="fab fa-twitter"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/feed/" target="_blank" class="btn btn-outline-light "
+                            role="button"><i class="fab fa-linkedin"></i>
+                        </a>
+
+                        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=geosigfelix1@gmail.com"
+                            target="_blank" class="btn btn-outline-light   " role="button"
+                            style="text-transform: lowercase;"><i class="far fa-envelope"></i>
+                            geosigfelix1@gmail.com </a>
+                        <a href="#" class="btn btn-outline-light " role="button"><i class="fas fa-mobile-alt"></i>
+                            55-7180-8563 </a>
+                        <a href="#" class="btn btn-outline-light " role="button"><i class="fas fa-map-marker-alt"></i>
+                            Cerrada Matamoros,No.10, <span>Tultepec, Mex.</span> </a>
+
+                    </li>
+
+
+                </ul>
+
+
             </div>
         </div>
-      
+    </div>
 
-    
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="static/js/jquery.slim.min.js"></script>
-        <script src="static/js/all.js"></script>
-        <script src="static/js/fontawesome.js"></script>
-      
-    </body>
+
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="static/js/jquery.slim.min.js"></script>
+    <script src="static/js/all.js"></script>
+    <script src="static/js/fontawesome.js"></script>
+
+</body>
+
 </html>
