--- a/escuelas/templates/inicio.html
+++ b/escuelas/templates/inicio.html
@@ -6,9 +6,10 @@
 
 <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0" name="viewport">
+    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+        name="viewport">
     <meta content="telephone=no" name="format-detection">
     <meta content="address=no" name="format-detection">
     <meta content="origin" name="referrer">
@@ -24,14 +25,9 @@
     <title></title>
 
     <style>
-        html {
-            font-size: 18px;
-            font-family: "Homer Simpson UI";
-        }
-
         p {
             font-size: 20px;
-            color: salmon;
+            color: rgb(85, 85, 85);
             font-family: "Homer Simpson UI";
         }
 
@@ -55,11 +51,6 @@
             font-family: "Homer Simpson UI";
         }
 
-        .tx {
-            font-family: "Homer Simpson UI";
-            color: darkorange;
-        }
-
         .btn-estilo {
             background-color: rgb(110, 216, 248);
             color: cornsilk;
@@ -69,7 +60,16 @@
         h1 {
             font-size: 50px;
             font-family: "Homer Simpson UI";
-            color: cornflowerblue;
+            background-color: #011f01;
+            color: rgb(255, 255, 255);
+            text-align: justify;
+        }
+
+        h3 {
+            font-weight: bold;
+            font-family: "Homer Simpson UI";
+            color: rgb(0, 0, 0);
+            text-align: justify;
         }
 
         .sp {
@@ -88,26 +88,20 @@
             display: block;
             margin-left: auto;
             margin-right: auto;
+            justify-content: center;
+            align-items: center;
         }
     </style>
-
-
-
-
-
 </head>
-
-
 
 <body>
     <div class="container">
         <div class="row">
             <div class="col - xs">
                 <nav class="navbar navbar-dark bg-nav">
-                    <h1 style="background-color: #011f01; color: rgb(255, 255, 255); text-align: justify;"
-                        class="text-center -xs">
+                    <h1 class="text-center -xs">
                         &nbsp; Instituto Nacional para la Educación de los Adultos
-                        <a class="navbar-brand"><img src="static/img/inealog.png" height="10%" width="20%" alt="Logo">
+                        <a class="navbar-brand"><img src="static/img/inealog.png" height="20%" width="15%" alt="Logo">
                             &nbsp;&nbsp; <span class="sp">Sistema de información geográfica </span></a>
                     </h1>
                 </nav>
@@ -120,37 +114,54 @@
     <div class="container">
 
         <div class="col - xs">
-            <div class="row tx">
+            <div class="card-deck row">
                 <div class="col-md-4">
-                    <h1 class=" text-center">Usuarios</h1>
-                    <div class="card card-block">
-                        <h3 class="card-title text-center"> Usuarios</h3>
-                        <img class="imag" src="static/img/u2.png" width="100%" height="200">
-                        <p class="card-text">Busca la unidad operativa que mas te quede cerca de tu casa o trabajo</p>
+
+                    <div class="card">
+                        <div class="card-footer">
+                            <h3 class="card-title text-center"> Usuarios</h3>
+                        </div>
+
+                        <img class="card-img-top" src="static/img/u2.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <p class="card-text" style="text-align: justify;">Utiliza el mapa interactivo  para poder encontrar posibles lugares donde estudiar tú primaria o secundaria cercanos a tu domicilio con certificación oficial en el Estado de México.   </p>
+
+                        </div>
+
                         <a href="http://127.0.0.1:8000/Mapaweb" class="btn btn-outline-primary " role="button"><i
                                 class="far fa-user-circle"></i> </a>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <h1>Administradores</h1>
-                    <div class="card card-block">
-                        <h3 class="card-title text-center"> Geolocalización</h3>
-                        <img class="imag " src="static/img/a5.png" width="80%" height="170">
-                        <p class="card-text">Ubica y administra geográficamente las unidades operativas que se
-                            encuentran en
-                            el Estado de México</p>
-                        <a href="http://127.0.0.1:8000/admin/login/?next=/admin/" target="_blank" class="btn btn-outline-success "
-                            role="button"><i class="fas fa-map-marked-alt"></i> </a>
+
+                    <div class="card">
+                        <div class="card-footer">
+                            <h3 class="card-title text-center"> Geolocalización</h3>
+                        </div>
+
+                        <img class="card-img-top" src="static/img/a2.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <p class="card-text" style="text-align: justify;">Ubicación geográfica de los lugares donde se encuentran las unidades operativas en el Estado de México. </p>
+
+                        </div>
+                        <a href="http://127.0.0.1:8000/admin/login/?next=/admin/" target="_blank"
+                            class="btn btn-outline-success " role="button"><i class="fas fa-map-marked-alt"></i> </a>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <p></p><br><br>
-                    <div class="card card-block">
-                        <h3 class="card-title text-center">Estadística</h3>
-                        <img class="imag" src="static/img/a4.png" width="100%" height="196">
-                        <p class="card-text">Identifica las zonas de mayor rezago educativo en el Estado de México</p>
-                        <a href='http://localhost:8888/login?next=%2Ftree' target="_blank"  class="btn btn-outline-warning " role="button"><i
-                                class="far fa-chart-bar"></i> </a>
+
+                    <div class="card ">
+                        <div class="card-footer">
+                            <h3 class="card-title text-center">Estadística</h3>
+                        </div>
+
+                        <img class="card-img-top img-fluid" src="static/img/a4.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <p class="card-text " style="text-align: justify;">Identificación de los municipios con mayor rezago educativo en el Estado de México.</p>
+
+                        </div>
+                        <a href='http://localhost:8888/login?next=%2Ftree' target="_blank"
+                            class="btn btn-outline-warning " role="button"><i class="far fa-chart-bar"></i> </a>
                         <!-- "https://hub.gke.mybinder.org/user/jupyterlab-jupyterlab-demo-yeo0o5ap/lab"-->
                     </div>
                 </div>
@@ -159,6 +170,9 @@
 
 
     </div>
+
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
